--- a/templates/base.html.jinja
+++ b/templates/base.html.jinja
@@ -7,25 +7,28 @@
     <title>Wypożyczalnia samochodów</title>
 </head>
 <body>
-    <header class="navbar bg-success">
+    <header class="navbar bg-light">
         <div class="container-fluid">
-            <span class="navbar-brand mb-0 h1 text-center w-100"><a class="navbar-brand" href="#">Wypożyczalnia samochodów</a></span>
+            <span class="navbar-brand mb-0 h1 text-center w-100"><a class="navbar-brand" href="{% url 'index' %}">Wypożyczalnia samochodów</a></span>
         </div>
     </header>
-    <nav class="navbar navbar-expand-lg bg-success">
-        <div class="container-fluid">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Strona Główna</a>
-              </li>
-            </ul>
-          </div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="{% url 'index' %}">Strona Główna</a>
+          </li>
+        </ul>
         </div>
-      </nav>
+        <div class="d-flex">
+        <a class="btn btn-outline-success" href="#">Zaloguj się</a>
+        </div>
+      </div>
+    </nav>
     <section  class="container">
         <div class="row">
             <div class="col-8">
@@ -40,7 +43,7 @@
             </div>
         </div>
     </section>
-    <footer class="container-fluid alert alert-success text-center" style="position: fixed; bottom: 0; width: 100%; margin:auto;">&copy; Sebastian Słowakiewicz | Akademia nauk stosowanych w Nowym Targu</footer>
+    <footer class="container-fluid alert alert-success text-center" style="position: fixed; bottom: 0; width: 100%; margin:auto; border-radius: 0;">&copy; Sebastian Słowakiewicz | Akademia Nauk Stosowanych w Nowym Targu</footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
 </body>
 </html>
