--- a/templates/users/register.html.jinja
+++ b/templates/users/register.html.jinja
@@ -1,5 +1,5 @@
 {% extends "base.html.jinja" %}
 {% block left_panel %}
-    <h2>Formularz rejestracji</h2> 
-   {{form_user}}
+    <h2>Formularz rejestracji</h2>
+    {{form_users_register}}              
 {% endblock left_panel %}
