--- a/templates/base.html.jinja
+++ b/templates/base.html.jinja
@@ -7,28 +7,25 @@
     <title>Wypożyczalnia samochodów</title>
 </head>
 <body>
-    <header class="navbar bg-light">
+    <header class="navbar sticky-top bg-light">
         <div class="container-fluid">
             <span class="navbar-brand mb-0 h1 text-center w-100"><a class="navbar-brand" href="{% url 'index' %}">Wypożyczalnia samochodów</a></span>
         </div>
     </header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container-fluid">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="{% url 'index' %}">Strona Główna</a>
-          </li>
-        </ul>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="{% url 'index' %}"></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation"></button>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-link" aria-current="page" href="{% url 'index' %}">Strona Główna</a>
+                <a class="nav-link" aria-current="page" href="{% url 'cars' %}">Samochody</a>
+                <a class="nav-link" aria-current="page" href="{% url 'categories' %}">Kategorie</a>
+            </div>
+          </div>
         </div>
-        <div class="d-flex">
-        <a class="btn btn-outline-success" href="#">Zaloguj się</a>
-        </div>
-      </div>
-    </nav>
+      </nav>
     <section  class="container">
         <div class="row">
             <div class="col-8">
