--- a/templates/cars/cars.html.jinja
+++ b/templates/cars/cars.html.jinja
@@ -1,9 +1,11 @@
 {% extends "base.html.jinja" %}
 {% block left_panel %}
-    <h2>Lista samochodów w kategorii {{category}}</h2>
+    <h2>Lista samochodów</h2>
     <div class="list-group">
         {% for car in cars %}
             <a type="button" class="list-group-item list-group-item-action" href="{% url 'car' car.id %}">{{car}}</button>
         {% endfor %}   
-    </div>             
+    </div>
+    
+                 
 {% endblock left_panel %}
