--- a/templates/base.html.jinja
+++ b/templates/base.html.jinja
@@ -12,7 +12,7 @@
             <span class="navbar-brand mb-0 h1 text-center w-100"><a class="navbar-brand" href="{% url 'index' %}">Wypożyczalnia samochodów</a></span>
         </div>
     </header>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-bottom">
         <div class="container-fluid">
             <a class="navbar-brand" href="{% url 'index' %}"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation"></button>
@@ -22,6 +22,11 @@
                 <a class="nav-link" aria-current="page" href="{% url 'index' %}">Strona Główna</a>
                 <a class="nav-link" aria-current="page" href="{% url 'cars' %}">Samochody</a>
                 <a class="nav-link" aria-current="page" href="{% url 'categories' %}">Kategorie</a>
+            </div>
+            <div class="navbar-nav">
+                <a class="nav-link" aria-current="page" href="{% url 'register' %}">Zarejestruj</a>
+                <a class="nav-link" aria-current="page" href="{% url 'login' %}">Zaloguj</a>
+                <a class="nav-link" aria-current="page" href="{% url 'logout' %}">Wyloguj</a>
             </div>
           </div>
         </div>
@@ -40,7 +45,7 @@
             </div>
         </div>
     </section>
-    <footer class="container-fluid alert alert-success text-center" style="position: fixed; bottom: 0; width: 100%; margin:auto; border-radius: 0;">&copy; Sebastian Słowakiewicz | Akademia Nauk Stosowanych w Nowym Targu</footer>
+    <footer class="container-fluid alert alert-success text-center fixed-bottom" style="bottom: 0; width: 100%; margin:auto; border-radius: 0;">&copy; Sebastian Słowakiewicz | Akademia Nauk Stosowanych w Nowym Targu</footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
 </body>
 </html>
