--- a/templates/base.html.jinja
+++ b/templates/base.html.jinja
@@ -45,7 +45,7 @@
             </div>
         </div>
     </section>
-    <footer class="container-fluid alert alert-success text-center fixed-bottom" style="bottom: 0; width: 100%; margin:auto; border-radius: 0;">&copy; Sebastian Słowakiewicz | Akademia Nauk Stosowanych w Nowym Targu</footer>
+    <footer class="container-fluid alert alert-success text-center sticky-bottom">&copy; Sebastian Słowakiewicz | Akademia Nauk Stosowanych w Nowym Targu</footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
 </body>
 </html>
