--- a/templates/cars/categories.html.jinja
+++ b/templates/cars/categories.html.jinja
@@ -3,7 +3,7 @@
     <h2>Lista kategorii</h2>
     <div class="list-group">
         {% for class, category in categories.items %}
-            <a type="button" class="list-group-item list-group-item-action" href="{% url 'category' category.id %}">{{class}} - {{category}}</a>
-        {% endfor %}   
-    </div>          
+            <a type="button" class="list-group-item list-group-item-action" href="{% url 'category' class %}">{{class}} - {{category}}</a>
+        {% endfor %}  
+    </div>                 
 {% endblock left_panel %}
