--- a/templates/cars/category.html.jinja
+++ b/templates/cars/category.html.jinja
@@ -3,7 +3,7 @@
     <h2>Lista samochodów w kategorii {{category}}</h2>
     <div class="list-group">
         {% for car in cars %}
-            <a type="button" class="list-group-item list-group-item-action" href="{% url 'car' car.id %}">{{car}}</button>
-        {% endfor %}   
-    </div>             
+            <a type="button" class="list-group-item list-group-item-action" href="{% url 'car' car.id %}">{{car}}</a>
+        {% endfor %}  
+    </div>               
 {% endblock left_panel %}
