--- a/templates/base.html.jinja
+++ b/templates/base.html.jinja
@@ -17,9 +17,15 @@
                     <a class="nav-link" href="{% url 'categories' %}">Kategorie</a>
                 </div>
                 <div class="navbar-nav">
-                    <a class="nav-link" href="{% url 'register' %}">Zarejestruj</a>
+                    {% if user.is_authenticated %}
+                    <a class="nav-link" href="{% url 'dashboard' %}">{{ user.username }}</a>
+                    {% else %}
                     <a class="nav-link" href="{% url 'login' %}">Zaloguj</a>
-                    <a class="nav-link" href="{% url 'logout' %}">Wyloguj</a>
+                    <a class="nav-link" href="{% url 'register' %}">Zarejestruj</a>
+                    {% endif %}
+                    {% if user.is_authenticated %}
+                    <a class="btn btn-outline-success" href="{% url 'logout' %}">Wyloguj</a>
+                    {% endif %}
                 </div>
             </div>
         </nav>
