--- a/templates/users/register.html.jinja
+++ b/templates/users/register.html.jinja
@@ -3,7 +3,7 @@
 <h2>Rejestracja</h2>
 <form method="POST">
     {% csrf_token %}
-    {{ form_user_register.as_p }}
+    <div class="mb-3">{{ form_user_register.as_p }}</div>
     <button type="submit">Zarejestruj się</button>
 </form>
 
