--- a/templates/cars/category.html.jinja
+++ b/templates/cars/category.html.jinja
@@ -2,6 +2,9 @@
 {% block left_panel %}
     <h2>Lista samochodów w kategorii {{category}}</h2>
     <div class="list-group">
+        {% if cars|length == 0 %}
+            <p class="alert alert-info" style="max-width: 400px;" role="alert">Brak samochodów w bazie danych.</p>
+        {% endif %}
         {% for car in cars %}
             <a type="button" class="list-group-item list-group-item-action" href="{% url 'car' car.id %}">{{car}}</a>
         {% endfor %}  
