--- a/templates/users/dashboard.html.jinja
+++ b/templates/users/dashboard.html.jinja
@@ -1,6 +1,38 @@
 {% extends "base.html.jinja" %}
-{% block left_panel %}
-<h2>Witaj, {{ request.user.username }}!</h2>
-<p>To jest Twój panel użytkownika.</p>
-<a href="{% url 'logout' %}">Wyloguj się</a>
-{% endblock left_panel %}
+
+<div style="display: flex; flex-direction: row;">
+    {% block left_panel %}
+    <div style="width: 100%; height:100%; padding: 20px; border-right: 1px solid #ccc;">
+        <h2>Witaj, {{ request.user.username }}!</h2>
+        <p>To jest Twój panel użytkownika.</p>
+        <p>Możesz tutaj zarządzać swoimi danymi, przeglądać historię wypożyczeń i wiele więcej.</p>
+        <p>Jeśli potrzebujesz pomocy, skontaktuj się z naszym zespołem wsparcia.</p>
+        <br>
+        <p>Twoje dane:</p>
+        <ul>
+            <li><strong>Nazwa użytkownika:</strong> {{ request.user.username }}</li>
+            <li><strong>Email:</strong> {{ request.user.email }}</li>
+            <li><strong>Data rejestracji:</strong> {{ request.user.date_joined|date:"Y-m-d H:i" }}</li>
+        </ul>
+        <br>
+        <p>Możesz również zmienić swoje hasło lub edytować profil.</p>
+        <br>
+        <p>Jeśli chcesz zmienić swoje dane, przejdź do sekcji <a href="">Edytuj profil</a>.</p>
+    </div>
+    {% endblock %}
+
+    {% block right_panel %}
+    <div style="width: 50%; padding: 20px;">
+        <h2>Twoje wypożyczenia i transakcje</h2>
+        <p>W tej sekcji możesz zarządzać swoimi wypożyczeniami i przeglądać historię transakcji.</p>
+        <br>
+        <p>Jeśli chcesz wypożyczyć samochód, przejdź do sekcji <a href="{% url 'cars' %}">Samochody</a>.</p>
+        <br>
+        <p>Jeśli chcesz przeglądać kategorie samochodów, przejdź do sekcji <a href="{% url 'categories' %}">Kategorie</a>.</p>
+        <br>
+        <p>Jeśli chcesz zobaczyć historię swoich wypożyczeń, przejdź do sekcji <a href="">Historia wypożyczeń</a>.</p>
+        <br>
+        <p>Jeśli chcesz zobaczyć szczegóły swoich transakcji, przejdź do sekcji <a href="">Transakcje</a>.</p>
+    </div>
+</div>
+{% endblock %}
